@@ -1,5 +1,10 @@
  (Format: Year/Month/Day)
 Changes for 1.0rc3:
+*07/01/16:
+   * Don't force user to reconfigure manually in order to apply menu and
+     default window transparency changes; instead, in order to conserve system
+     resources, do it a half-second after the user stops changing them (Mark)
+     Screen.cc
 *07/01/15:
    * Prevent per-window alpha menu from scrolling past 0 or 255 (Mark)
      IntResMenuItem.hh
